added text test

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <button class="btn btn-outline-success my-2 my-sm-0 searchBtn" type="submit">Search</button>
         </form>
     </nav>
+    <form class="resultsdiv">
+    </form>
     <script src="assets/js/app.js"></script>
 </body>
 
