--- a/project1.html
+++ b/project1.html
@@ -10,39 +10,44 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body background="null">
+<body>
 
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand">Deep Cut</a>
-        <form class="form-inline">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+
+    <img id="logo" src="pic/logo.png">
+    <ul id="navLink">
+        <a href="#">
+            <li>PAGES</li>
+        </a>
+        <a href="#">
+            <li>INFO</li>
+        </a>
+        <a href="#">
+            <li>LANDING</li>
+        </a>
+    </ul>
+
+
+
+    <div>
+        <p id="name">Deep Cut </P>
+        <p class="introduction" id="p1">
+            Before human build the country. They build the music.
+        </p>
+        <p class="introduction" id="p2">
+            The thing that change the cultrue, change the human, change the world.
+        </p>
+        <form class="searchingBtn">
+            <input class="searchingWindow" type="search" placeholder="Get start..." aria-label="Search">
+            <br><br>
+            <button type="button" class="btn btn-outline-light">Start Trip</button>
         </form>
-      </nav>
+    </div>
 
-   
-        <div class="card-footer text-muted">
-            <h1>
-                Min player
-            </h1>
-            <div>
-                <h5>
-                    Artist Info
-                </h5>
-            </div>
-              </div>
+    <footer id="foot">
+        <p>DESIGNED BY DEEP CUT IN WASHINGTON&reg;</p>
+    </footer>
 
-        <div id = "lyricsWindow">
-            <h1>
-                Lyrics Window gotta be here!
-            </h1>
-        </div>
-
-        <footer id = "foot">
-            <p>This is footer</p>
-        </footer>
-
-        </div>
+    </div>
     </div>
 
 </body>
