Linked HTML with Searching Function

--- a/index.html
+++ b/index.html
@@ -1,28 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Deep Cut X</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="assets/js/app.js"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand">Deep Cut X</a>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2 searchField" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0 searchBtn" type="submit">Search</button>
-        </form>
-    </nav>
-    <form class="resultsdiv">
-    </form>
-    <script src="assets/js/app.js"></script>
-</body>
 
-</html>
+
+    <img id="logo" src="pic/logo.png">
+    <ul id="navLink">
+        <a href="#">
+            <li>PAGES</li>
+        </a>
+        <a href="#">
+            <li>INFO</li>
+        </a>
+        <a href="#">
+            <li>LANDING</li>
+        </a>
+    </ul>
+
+
+
+    <div>
+        <p id="name">Deep Cut </P>
+        <p class="introduction" id="p1">
+            Before human build the country. They build the music.
+        </p>
+        <p class="introduction" id="p2">
+            The thing that change the cultrue, change the human, change the world.
+        </p>
+        <form class="searchingBtn">
+            <input class="searchingWindow searchField" type="search" placeholder="Get start..." aria-label="Search">
+            <br><br>
+            <a href="#">
+                <button type="button" class="btn btn-outline-light searchBtn">Start Trip</button>
+            </a>
+        </form>
+    </div>
+
+    <div class="resultsdiv">
+        
+    </div>
+    <footer id="foot">
+        <p>DESIGNED BY DEEP CUT IN WASHINGTON&reg;</p>
+    </footer>
+
+    </div>
+    </div>
+
+</body>
