--- a/playingpage.html
+++ b/playingpage.html
@@ -10,13 +10,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body background="null">
+<body>
 
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand">Deep Cut</a>
-        <form class="form-inline">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <nav id="searching">
+        <p id="name">Deep Cut  </P>
+            <p class="introduction">
+                Befor human build the country. They build the music. 
+            </p>
+            <p class="introduction">
+                The thing that change the cultrue, change the human, change the world.
+            </p>
+        <form class="searchingBtn">
+          <input class="searchingWindow" type="search" placeholder="Get start..." aria-label="Search">
+          <br><br>
+          <button type="button" class="btn btn-secondary">Start Trip</button>
         </form>
       </nav>
 
@@ -39,7 +46,7 @@
         </div>
 
         <footer id = "foot">
-            <p>This is footer</p>
+            <p>DESIGNED BY DEEP CUT IN WASHINGTON&reg;</p>
         </footer>
 
         </div>
