added spotify widget that plays the music after selecting it

--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
         </form>
     </div>
 
-    <div class="resultsdiv">
-        
-    </div>
+    <div class="resultsdiv"></div>
+
+    <div class="widgetplayer"></div>
+
     <footer id="foot">
         <p>DESIGNED BY DEEP CUT IN WASHINGTON&reg;</p>
     </footer>
 
-    </div>
+    /div>
     </div>
 
 </body>
