The newest html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="assets/js/app.js"></script>
 </head>
 
@@ -16,15 +17,13 @@
 
     <img id="logo" src="pic/logo.png">
     <ul id="navLink">
-        <a href="#">
-            <li>PAGES</li>
-        </a>
-        <a href="#">
-            <li>INFO</li>
-        </a>
-        <a href="#">
-            <li>LANDING</li>
-        </a>
+                <i class="fa fa-twitch"></i>
+                <i class="fa fa-facebook-square"></i>
+                <i class="fa fa-steam-square"></i>
+                <i class="fa fa-instagram"></i>
+                <i class="fa fa-github"></i>
+                <i class="fa fa-stack-overflow"></i>
+
     </ul>
 
 
@@ -38,23 +37,27 @@
             The thing that change the cultrue, change the human, change the world.
         </p>
         <form class="searchingBtn">
-            <input class="searchingWindow searchField" type="search" placeholder="Get start..." aria-label="Search">
+            <input class="searchingWindow searchField" type="search" placeholder="Get start from here..." aria-label="Search">
             <br><br>
-            <a href="#">
+            <a href=".resultsdiv">
                 <button type="button" class="btn btn-outline-light searchBtn">Start Trip</button>
             </a>
         </form>
     </div>
 
-    <div class="resultsdiv"></div>
+    <div id="blockCase">
+
+    </div>
+
+    <div class="resultsdiv row"></div>
 
     <div class="widgetplayer"></div>
 
-    <footer id="foot">
+    <footer class="widgetplayer" id="foot">
         <p>DESIGNED BY DEEP CUT IN WASHINGTON&reg;</p>
     </footer>
 
-    /div>
+
     </div>
 
 </body>
