small changes to jumbotron and api code

--- a/index.html
+++ b/index.html
@@ -52,11 +52,16 @@
     <div class="resultsdiv row"></div>
 
     <div class="jumbotron" id="lyrics">
-        <h1 class="display-4 lAlb"><img src="" class="lyricAlb"></h1>
-        <p class="infoLyrics"></p>
+        <div class="display-4 lAlb">
+        </div>  
+        <div class="infoLyrics">
+        </div>
         <hr class="my-4">
-        <p class="displayLyrics"></p>
+        <p class="displayLyrics"></p> 
       </div>
+
+<!-- <h1 class="display-4 lAlb"><img src="" class="lyricAlb"></h1>
+        <p class="infoLyrics"></p>  -->
 
     <div class="widgetplayer"></div>
 
